--- a/src/main/webapp/css/citation.css
+++ b/src/main/webapp/css/citation.css
@@ -2,6 +2,8 @@
 .framePadding{
     padding: 64px 24px 24px;
     text-align: center;
+    max-width:1024px;
+margin: 0 auto;
 }
 
 .textFieldStyle{
